TODO
* change file header filetime conversion
* implement libfdatetime
* create API functions to access link information values
* work on todo's

Refactor
* volume information read into separate subfunction
* network share information read into separate subfunction

Deployment:
* update manuals
* create debian package files
* update macosx package files
* update codegear files
* check msvcpp files

20090911
* updated libsystem

20090910
* changed file sigature detection

20090908
* worked on implementic API functions

20090907
* textual changes
* worked on msvscpp compilation
* cleaned msc and borlandc config files
* removed GUID generation code

20090906
* worked on libfdatetime integration

20090905
* initial version based on libnk2
