@@ -25,28 +25,28 @@
 
 #include <liblnk/types.h>
 
-#define LIBLNK_VERSION			@VERSION@
+#define LIBLNK_VERSION							@VERSION@
 
 /* The liblnk version string
  */
-#define LIBLNK_VERSION_STRING		"@VERSION@"
+#define LIBLNK_VERSION_STRING						"@VERSION@"
 
 /* The liblnk file access
  * bit 1        set to 1 for read access
  * bit 2        set to 1 for write access
  * bit 3-8      not used
  */
-#define LIBLNK_FLAG_READ		0x01
+#define LIBLNK_FLAG_READ						0x01
 /* Reserved: not supported yet */
-#define LIBLNK_FLAG_WRITE		0x02
+#define LIBLNK_FLAG_WRITE						0x02
 
 /* The liblnk file access macros
  */
-#define LIBLNK_OPEN_READ		( LIBLNK_FLAG_READ )
+#define LIBLNK_OPEN_READ						( LIBLNK_FLAG_READ )
 /* Reserved: not supported yet */
-#define LIBLNK_OPEN_WRITE		( LIBLNK_FLAG_WRITE )
+#define LIBLNK_OPEN_WRITE						( LIBLNK_FLAG_WRITE )
 /* Reserved: not supported yet */
-#define LIBLNK_OPEN_READ_WRITE		( LIBLNK_FLAG_READ | LIBLNK_FLAG_WRITE )
+#define LIBLNK_OPEN_READ_WRITE						( LIBLNK_FLAG_READ | LIBLNK_FLAG_WRITE )
 
 /* The data flags
  */
