@@ -362,6 +362,30 @@ int liblnk_io_handle_read_file_header(
 
 		return( -1 );
 	}
+#if defined( HAVE_DEBUG_OUTPUT )
+	libnotify_verbose_printf(
+	 "%s: reading file header at offset: %" PRIu64 " (0x%08" PRIx64 ")\n",
+	 function,
+	 0,
+	 0 );
+#endif
+
+	if( libbfio_handle_seek_offset(
+	     io_handle->file_io_handle,
+	     0,
+	     SEEK_SET,
+	     error ) == -1 )
+	{
+		liberror_error_set(
+		 error,
+		 LIBERROR_ERROR_DOMAIN_IO,
+		 LIBERROR_IO_ERROR_SEEK_FAILED,
+		 "%s: unable to seek file header offset: %" PRIu64 ".",
+		 function,
+		 0 );
+
+		return( -1 );
+	}
 	read_count = libbfio_handle_read(
 	              io_handle->file_io_handle,
 	              (uint8_t *) &file_header,
